--- a/dev/benchmarks/index.html
+++ b/dev/benchmarks/index.html
@@ -14,21 +14,23 @@ using Comrade
 using Distributions
 using BenchmarkTools
 using ForwardDiff
+using VLBIImagePriors
+using Zygote
 
 # To download the data visit https://doi.org/10.25739/g85n-f134
-obs = ehtim.obsdata.load_uvfits((joinpath(@__DIR__, &quot;assets/SR1_M87_2017_096_lo_hops_netcal_StokesI.uvfits&quot;))
+obs = ehtim.obsdata.load_uvfits(joinpath(@__DIR__, &quot;assets/SR1_M87_2017_096_lo_hops_netcal_StokesI.uvfits&quot;))
 obs = scan_average(obs)
-amp = extract_amp(obs)
+amp = extract_table(obs, VisibilityAmplitudes())
 
 function model(θ)
     (;rad, wid, a, b, f, sig, asy, pa, x, y) = θ
-    ring = f*smoothed(stretched(MRing((a,), (b,)), μas2rad(rad), μas2rad(rad)), μas2rad(wid))
-    g = (1-f)*shifted(rotated(stretched(Gaussian(), μas2rad(sig)*asy, μas2rad(sig)), pa), μas2rad(x), μas2rad(y))
+    ring = f*smoothed(modify(MRing((a,), (b,)), Stretch(μas2rad(rad))), μas2rad(wid))
+    g = modify(Gaussian(), Stretch(μas2rad(sig)*asy, μas2rad(sig)), Rotate(pa), Shift(μas2rad(x), μas2rad(y)), Renormalize(1-f))
     return ring + g
 end
 
 lklhd = RadioLikelihood(model, amp)
-prior = (
+prior = NamedDist(
           rad = Uniform(10.0, 30.0),
           wid = Uniform(1.0, 10.0),
           a = Uniform(-0.5, 0.5), b = Uniform(-0.5, 0.5),
@@ -55,9 +57,9 @@ x0 = inverse(tpost, θ)
 
 using LogDensityProblemsAD
 # Now we benchmark the gradient
-gℓ = ADgradient(Val(:ForwardDiff), tpost)
+gℓ = ADgradient(Val(:Zygote), tpost)
 @benchmark LogDensityProblemsAD.logdensity_and_gradient($gℓ, $x0)</code></pre><h3 id="eht-imaging-Code"><a class="docs-heading-anchor" href="#eht-imaging-Code">eht-imaging Code</a><a id="eht-imaging-Code-1"></a><a class="docs-heading-anchor-permalink" href="#eht-imaging-Code" title="Permalink"></a></h3><pre><code class="language-julia hljs"># To download the data visit https://doi.org/10.25739/g85n-f134
-obs = ehtim.obsdata.load_uvfits((joinpath(@__DIR__, &quot;assets/SR1_M87_2017_096_lo_hops_netcal_StokesI.uvfits&quot;))
+obs = ehtim.obsdata.load_uvfits(joinpath(@__DIR__, &quot;assets/SR1_M87_2017_096_lo_hops_netcal_StokesI.uvfits&quot;))
 obs = scan_average(obs)
 
 
@@ -180,4 +182,4 @@ gfobj = ehtim.modeling.modeling_utils.objgrad
 @benchmark fobj($pinit)
 
 # Now we benchmark the gradient
-@benchmark gfobj($pinit)</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a>Chael A, et al. <em>Inteferometric Imaging Directly with Closure Phases</em> 2018 ApJ 857 1 arXiv:1803/07088</li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../vlbi_imaging_problem/">Introduction to the VLBI Imaging Problem »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 26 July 2023 13:17">Wednesday 26 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+@benchmark gfobj($pinit)</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a>Chael A, et al. <em>Inteferometric Imaging Directly with Closure Phases</em> 2018 ApJ 857 1 arXiv:1803/07088</li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../vlbi_imaging_problem/">Introduction to the VLBI Imaging Problem »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 26 July 2023 15:13">Wednesday 26 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
